css/style.css
@font-face {
	font-family: Principal;
	src:url(../fonts/YanoneKaffeesatz-VariableFont_wght.ttf);
}

:root {
	--preto: #000000;
  --branco: #ffffff;
  --cinzaClaro: #707070;
  --cinzaEscuro: #555555;
  --verdeClaro: #318964;
  --verdeEscuro: #24612c;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--preto);
  color: var(--branco);
  font-family: Principal;
}

img {
  width: 100%;
  height: 40vh;
  border-radius: 10px;
}

/* HEADER */
.header-wrapper {
  height: 100vh;
  width: 100%;
  background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, var(--verdeClaro));
  background-size: 100% 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  text-align: center;
}

h1 {
  color: var(--branco);
  text-transform: uppercase;
  letter-spacing: 4px;
}

h2 {
  color: var(--branco);
  text-transform: uppercase;
  letter-spacing: 4px;
}

a:hover {
  color: var(--branco);
}

.social-media {
  margin: 1rem 0 1rem;
  flex-direction: row;
}

.social-media a {
  text-decoration: none;
  color: var(--branco);
  font-size: 24px;
  padding: 1rem 4rem;
  border: 1px solid var(--branco);
  min-width: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s cubic-bezier(0.55, 0.025, 0.675, 0.97);
}

.social-media a:hover {
  background-color: var(--branco);
  color: var(--preto);
}

/* Nav Menu Items */
nav ul li {
  display: none;
  height: 20%;
  overflow: hidden;
}

nav li a {
  padding: 15px;
  margin: 10px 0;
  top: 45%;
  color: #2E1C2B;
  letter-spacing: 4px;
  font-size: 40px;
  text-transform: uppercase;
  letter-spacing: 4px;
  display: block;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

nav li a:hover {
  transform: scale(1.1);
}

.menu-background {
  position: absolute;
  top: 28px;
  right: 30px;
  background: transparent;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  box-shadow: 0px 0px 0px 0px var(--branco);
  z-index: -1;
  transition: 400ms ease-in-out 0s;
}

.menu-items {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  opacity: 0;
  visibility: hidden;
  transition: 400ms ease-in-out 0s;
}

.menu-items ul {
  /* display: flex; */
  display: none;
  flex-direction: column;
  justify-content: stretch;
  list-style: none;
}

/* MENU HAMBURGUER */
.checkbox-container {
  /* display: flex; */
  display: none;
  justify-content: center;
  align-items: center;
}

.menu-bars {
  position: absolute;
  height: 100px;
  width: 100px;
  top: 0;
  right: 0;
  display: flex;
  justify-content: center;
  cursor: pointer;
  z-index: 9999;
  transition: 400ms ease-in-out 0s;
}

.menu-bars .trace {
  background-color: var(--branco);
  width: 50px;
  height: 6px;
  position: absolute;
  border-radius: 2px;
  transition: 0.5s ease-in-out;
}

.menu-bars .trace:nth-child(1) {
  top: 36px;
  transform: rotate(0);
}

.menu-bars .trace:nth-child(2) {
  top: 51px;
  transform: rotate(0);
}

.menu-bars .trace:nth-child(3) {
  top: 66px;
  transform: rotate(0);
}

#toggle {
  display: none;
}

/* ANIMAÇÃO DO MENU */
#toggle:checked + .menu-bars .trace:nth-child(1) {
  transform: rotate(45deg);
  background-color: #2E1C2B;
  top: 47px;
}

#toggle:checked + .menu-bars .trace:nth-child(2) {
  transform:  translateX(-100px);
  width: 30px;
  visibility: hidden;
  opacity: 0;
}

#toggle:checked + .menu-bars .trace:nth-child(3) {
  transform: rotate(-45deg);
  background-color: #2E1C2B;
  top: 48px;
}

#toggle:checked + .menu-bars {
  background-color: #adadad;
}

#toggle:checked ~ .menu-background {
  box-shadow: 0px 0px 0px 100vmax #adadad;
  z-index: 1;
}

#toggle:checked ~ .menu-items {
  visibility: visible;
  opacity: 1;
}

/* Background Toggles */
.background-toggles {
  position: absolute;
  right: 50px;
  top: 30px;
  display: flex;
}

.background-toggles> div:hover {
  border: 4px solid var(--verdeClaro);
  height: 20px;
  width: 20px;
}

.background-toggles > div {
  height: 25px;
  width: 25px;
  border-radius: 10px;
  margin-right: 10px;
  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
  cursor: pointer;
}

.background-1 {
  background-color: var(--branco);
  color: var(--preto);
}

/* Scroll Down Button */
.scroll-down {
  position: absolute;
  bottom: 40px;
  width: 100%;
  left: 0;
}

.scroll-down a {
  display: block;
}

.scroll-down .scroll-mouse {
  border: 2px solid var(--branco);
  width: 30px;
  height: 50px;
  border-radius: 20px;
  position: relative;
  display: inline-block;
}

.scroll-down .scroll-mouse .whell {
  background-color: var(--cinzaClaro);
  position: absolute;
  width: 6px;
  height: 6px;
  left: 50%;
  top: 4px;
  border-radius: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  -webkit-animation: scroll 1s linear 0.5s infinite backwards;
          animation: scroll 1s linear 0.5s infinite backwards;
}

@-webkit-keyframes scroll {
  0% {
    top: 4px;
    opacity: 1;
  }
  100% {
    top: 21px;
    opacity: 0;
  }
}

@keyframes scroll {
  0% {
    top: 4px;
    opacity: 1;
  }
  100% {
    top: 21px;
    opacity: 0;
  }
}

/* CARDS */
.container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 3rem 0;
}

.card-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 90%;
}

.card {
  height: 43vh;
  width: 400px;
  margin: 3rem 0 3rem 0;
  display: flex;
  justify-content: center;
  align-items: center;
  filter: grayscale(0.5);
  color: var(--branco);
  cursor: pointer;
  transition: 0.3s;
  border-radius: 10px;
}

.bg {
  background-image: url('../img/room.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.card-text {
  width: 55%;
  font-family: sans-serif;
  letter-spacing: 1px;
  margin: 2rem 0 2rem 0px;
}

.card-wrapper {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.card-wrapper::before {
  content: '';
  position: absolute;
  height: 100px;
  width: 100px;
  display: block;
  border: 1px solid var(--branco);
  opacity: 0;
  transition: 0.3s;
}

.card-wrapper h2 {
  font-size: 40px;
  text-transform: uppercase;
  letter-spacing: 4px;
  margin: 0;
  transition: 0.3s;
}

.card-wrapper p {
  font-size: 0;
  visibility: hidden;
  opacity: 0;
  font-weight: bold;
  text-transform: uppercase;
  transition: 0.3s;
}

.card:hover {
  filter: unset;
}

.card:hover > .card-wrapper::before {
  height: 35vh;
  width: 350px;
  opacity: 1;
}

.card:hover > .card-wrapper p {
  opacity: 1;
  visibility: visible;
  font-size: 14px;
}

#about {
  font-size: 18px;
}

/* TABS */
.tab {
  background: linear-gradient(89deg, var(--verdeClaro), var(--verdeEscuro));
  color: var(--preto);
  position: relative;
  margin: 0rem 0rem 24rem 0rem;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
}

.tab h2 {
  margin: 5px;
}

.tab ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.tab li {
  width: fit-content;
  margin: 8px 0 8px 0;
}

.tab a {
  color: var(--preto);
  font-size: 18px;
  text-decoration: none;
}

.tab a:hover {
  color: var(--branco);
}

.tab a img {
  border-left: 4px solid var(--verdeClaro);
  opacity: 0;
  position: absolute;
  bottom: -100%;
  left: 0px;
  transition: 200ms;
}

/* BACK TO TOP BUTTON */
.back-to-top-btn {
  display: flex;
  position: fixed;
  justify-content: center;
  align-items: center;
  bottom: 10px;
  right: 10px;
  width: 45px;
  height: 45px;
  background-color: var(--preto);
  text-decoration: none;
}

.back-to-top-btn::after {
  content: "↑";
  font-size: 32px;
  font-weight: bold;
  transition: margin-top 150ms;
}

.back-to-top-btn:hover::after {
  margin-top:-4px;
}

/* FOOTER */
footer {
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@keyframes backgroundTransition {
  0% {
      background-position:  0% 75%;
  }
  50% {
      background-position: 100% 75%;
  }
  100% {
      background-position: 0% 95%;
  }
}

.window-frame {
  background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, var(--verdeClaro));
  background-size: 400% 400%;
  animation: backgroundTransition 5s ease-in-out infinite;
  color: var(--branco);
  border-radius: 20px;
  display: flex;
  justify-content: space-evenly;
  padding: 8px;
  width: 40%;
  border: var(--verdeEscuro) solid 2px;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
  height: 0px;
  -webkit-overflow-scrolling: touch;
}

::-webkit-scrollbar:hover {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px var(--branco); 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--cinzaClaro); 
  border-radius: 2px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--verdeClaro);
  height: 1px;
}

